--- a/views/admin/users.handlebars
+++ b/views/admin/users.handlebars
@@ -18,7 +18,7 @@
   <tbody>
     {{#each users}}
     <tr>
-      <th scope="row">{{@index}}</th>
+      <th scope="row">{{this.id}}</th>
       <td>{{this.email}}</td>
       <td>
         {{#if isAdmin}}
