--- a/views/admin/restaurants.handlebars
+++ b/views/admin/restaurants.handlebars
@@ -1,7 +1,8 @@
 <h1>餐廳後台</h1>
 
 <a href='/admin/restaurants'>Restaurants</a> |
-<a href='/admin/users'> Users</a>
+<a href='/admin/categories' class="text-dark">Categories</a> |
+<a href='/admin/users' class="text-dark"> Users</a>
 <br />
 <br />
 <a href='/admin/restaurants/create'>
