--- a/views/admin/restaurants.handlebars
+++ b/views/admin/restaurants.handlebars
@@ -29,7 +29,7 @@
       <td>{{this.Category.name}}</td>
       <td>
         <button type="button" class="btn btn-link">
-          <a href="/admin/restaurants/{{this.id}}">
+          <a href="/admin/restaurants/{{this.id}}" class="text-success">
             Show
           </a>
         </button>
@@ -39,7 +39,7 @@
           </a>
         </button>
         <form action="/admin/restaurants/{{this.id}}?_method=DELETE" method="POST" style="display: inline;">
-          <button type="submit" class="btn btn-link">Delete</button>
+          <button type="submit" class="btn btn-link text-danger">Delete</button>
         </form>
       </td>
     </tr>
