Add User Profile Page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,9 @@
         {{/if}}
         {{#if user}}
         <span style="color: white;margin-right: 10px;">Hi, {{user.email}}</span>
-        <a href="/users/{{user.id}}" style="color: white;margin-right: 10px;">Profile</a>
+        <a href="/users/{{user.id}}" style="color: white;margin-right: 10px;">
+          <button type="button" class="btn btn-outline-primary">Profile</a>
+        </button>
         <a href="/logout"><button class="btn btn-outline-success my-2 my-sm-0">LogOut</button></a>
         {{/if}}
       </div>
