--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -21,10 +21,18 @@
     </a>
     {{#if isFavorited }}
     <form action="/favorite/{{restaurant.id}}?_method=DELETE" method="POST" style="display: contents;"><button
-        type="submit" class="btn btn-danger">移除最愛</button></form>
+        type="submit" class="btn btn-danger mr-2">移除最愛</button></form>
     {{else}}
     <form action="/favorite/{{restaurant.id}}" method="POST" style="display: contents;"><button type="submit"
-        class="btn btn-primary">加到最愛</button></form>
+        class="btn btn-primary mr-2">加到最愛</button></form>
+    {{/if}}
+
+    {{#if isLiked }}
+    <form action="/like/{{restaurant.id}}?_method=DELETE" method="POST" style="display: contents;"><button type="submit"
+        class="btn btn-outline-secondary">Unlike</button></form>
+    {{else}}
+    <form action="/like/{{restaurant.id}}" method="POST" style="display: contents;"><button type="submit"
+        class="btn btn-info">Like</button></form>
     {{/if}}
   </div>
   <hr>
