--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -29,10 +29,10 @@
 
     {{#if isLiked }}
     <form action="/like/{{restaurant.id}}?_method=DELETE" method="POST" style="display: contents;"><button type="submit"
-        class="btn btn-outline-secondary">Unlike</button></form>
+        class="btn btn-danger">Unlike</button></form>
     {{else}}
     <form action="/like/{{restaurant.id}}" method="POST" style="display: contents;"><button type="submit"
-        class="btn btn-info">Like</button></form>
+        class="btn btn-outline-secondary">Like</button></form>
     {{/if}}
   </div>
   <hr>
