--- a/views/restaurants.handlebars
+++ b/views/restaurants.handlebars
@@ -44,9 +44,10 @@
 
           {{#if this.isLiked }}
           <form action="/like/{{this.id}}?_method=DELETE" method="POST"><button type="submit"
-              class="btn btn-outline-secondary">Unlike</button></form>
+              class="btn btn-danger">Unlike</button></form>
           {{else}}
-          <form action="/like/{{this.id}}" method="POST"><button type="submit" class="btn btn-info">Like</button>
+          <form action="/like/{{this.id}}" method="POST"><button type="submit"
+              class="btn btn-outline-secondary">Like</button>
           </form>
           {{/if}}
         </div>
