--- a/views/topUser.handlebars
+++ b/views/topUser.handlebars
@@ -19,7 +19,12 @@
   {{#each users}}
   <div class="col-3">
     <a href="/users/{{this.id}}">
+      {{#if this.image}}
       <img class="" src="{{this.image}}" width="140px" height="140px">
+      {{else}}
+      <img src="https://lighthouse-cdn.alphacamp.co/default/medium_user_photo.jpg" cwidth="140px" height="140px" />
+      {{/if}}
+
     </a>
     <h2>{{this.name}}</h2>
     <span class="badge badge-secondary">追蹤人數：{{this.FollowerCount}}</span>
